--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,13 +12,9 @@
  *
  */
 @import "bootstrap";
-@import "welcome";
 @import "form";
+@import "tshirt";
 
 body {
 	font-family: 'Montserrat', sans-serif;
-}
-
-.dark {
-	background-color: #f6f6f6;
 }
