--- a/app/views/static_pages/tshirts.html.erb
+++ b/app/views/static_pages/tshirts.html.erb
@@ -8,7 +8,7 @@
       <p class="card">
         Short sleeve shirts are $20.<br>
         Long sleeve shirts are $30.<br>
-        Order deadline is March 7.<br>
+        Order deadline is February 12.<br>
         Shirts available by online order only.<br>
         All shirts must be picked up at the dance.<br>
         There will not be additional shirts for sale at the dance.
@@ -32,13 +32,16 @@
           <strong>Available in these 4 styles</strong><br>
           (Only available in black, red, brown, and gray.)
         </p>
-        <p>&ldquo;Women's Short Sleeve Fine Jersey Tee&rdquo; [$20] <a href="https://www.royalapparel.net/5001w-women-s-short-sleeve-fine-jersey-tee.html" target=_blank>(view style guide in new tab)</a></p>
+        <p>
+          &ldquo;Women's Short Sleeve Fine Jersey Tee&rdquo; [$20] <a href="https://www.royalapparel.net/5001w-women-s-short-sleeve-fine-jersey-tee.html" target=_blank>(view style guide in new tab)</a><br>
+          (<em>this style not available in brown</em>)
+        </p>
         <p>&ldquo;Unisex Short Sleeve Fine Jersey Tee&rdquo; [$20] <a href="https://www.royalapparel.net/unisex-short-sleeve-fine-jersey-tee-5051.html" target=_blank>(view style guide in new tab)</a></p>
         <p>&ldquo;Women's Long Sleeve Crew Tee&rdquo; [$30] <a href="https://www.royalapparel.net/l-s-crew-tee-10476.html" target=_blank>(view style guide in new tab)</a></p>
         <p>&ldquo;Unisex Long Sleeve Tee&rdquo; [$30] <a href="https://www.royalapparel.net/l-s-crew-tee.html" target=_blank>(view style guide in new tab)</a></p>
       </div>
 
-      <h2 class="alert alert-warning">Please return to the order form to place your order.</h2>
+      <h2 class="alert alert-warning text-center">Please close this tab to return to the order form.</h2>
     </div>
   </div>
 </section>
