--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -22,7 +22,7 @@
           <li><%= tshirt.style %> | <%= tshirt.color %> | $<%= tshirt.cost %>
         <% end %>
         </ul>
-        <p><strong>T-shirts can be picked up at the dance.</strong></p>
+        <p><strong>T-shirts must be picked up at the dance.</strong></p>
         <hr>
       <% end %>
       <p>
