--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -77,6 +77,7 @@
             <div class="form-group panel panel-body panel-warning">
               <%= select_tag "tshirt_style", options_for_select(["Women's Short Sleeve Fine Jersey Tee", "Unisex Short Sleeve Fine Jersey Tee", "Women's Long Sleeve Crew Tee", "Unisex Long Sleeve Tee"]), { include_blank: 'Select style', class: 'form-control', id: 'tshirt-style-select' } %><br>
               <%= select_tag "tshirt_color", options_for_select(["Black", "Red", "Gray", "Brown"]), { include_blank: 'Select color', class: 'form-control d-none', id: 'tshirt-color-select' } %><br>
+              <%= select_tag "tshirt_size", options_for_select(["xs", "sm", "md", "lg", "xl", "2x", "3x"]), { include_blank: 'Select size', class: 'form-control d-none', id: 'tshirt-size-select' } %><br>
               <p class="btn btn-sm btn-warning d-none" id="add-to-cart">Add to order</p>
             </div>
           </div>
