--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -26,8 +26,9 @@
         <hr>
       <% end %>
       <p>
-        Saturday, March 9, 2019<br>
-        7:30 lesson | 8-11:15 dance<br>
+        <strong><font color='red'>Please note the earlier time this year!</font></strong><br>
+        Saturday, March 14, 2020<br>
+        <strong><font color='red'>6:45 lesson | 7:15-10:30 dance</font></strong><br>
         PSU Smith Memorial Center Ballroom, 3rd Floor<br>
         1825 SW Broadway, Portland, Oregon
       </p>
@@ -36,7 +37,7 @@
         A receipt has been sent to <%= @order.email %>.<br>
         Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.
       </p>
-      <p><a href="http://www.cascadepromenade.org/dance/2019/01/06/Cascade-Promenade-2019.html">Check out other Cascade Promenade dances!</a></p>
+      <p><a href="http://www.cascadepromenade.org/dance/2019/12/22/Cascade-Promenade-2020.html">Check out other Cascade Promenade dances!</a></p>
     </div>
   </div>
 </section>
