--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,14 +1,18 @@
 <section class="payment-form dark">
   <div class="block-heading">
-    <h2><%= Rails.configuration.order[:order_form_title] %></h2>
+    <h2>
+      megaband admissions<br>
+      <sub>March 14 2020 | 6:45 lesson | 7:15-10:30 dance</sub>
+    </h2>
     <p><%= Rails.configuration.order[:order_form_description] %></p>
     <br>
     <p>Your name will be on a list at the door.</p>
     <p>(You will not receive actual tickets.)</p>
     <br>
     <p>
-      Saturday, March 9, 2019<br>
-      7:30 lesson | 8-11:15 dance<br>
+      <strong><font color='red'>Please note the earlier time this year!</font></strong><br>
+      Saturday, March 14, 2020<br>
+      6:45 lesson | <strong><font color='red'>7:15-10:30 dance</font></strong><br>
       PSU Smith Memorial Center Ballroom, 3rd Floor<br>
       1825 SW Broadway, Portland, Oregon
     </p>
