add language about entrance

--- a/app/views/orders/create.html.erb
+++ b/app/views/orders/create.html.erb
@@ -33,6 +33,7 @@
         1825 SW Broadway, Portland, Oregon
       </p>
       <p>Paid parking is available in the parking structure across Broadway from the building.</p>
+      <p><font color='red'>Dancers will need to enter through the Broadway street entrance this year.</font></p>
       <p>
         A receipt has been sent to <%= @order.email %>.<br>
         Please email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a> if you have any questions.
