add language about cancellation, donation

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,23 +1,9 @@
 <section class="payment-form dark">
   <div class="block-heading">
     <h2>
-      megaband admissions<br>
-      <sub>March 14 2020 | 6:45 lesson | 7:15-10:30 dance</sub>
+      megaband 2020 cancelled<br>
     </h2>
-    <p><%= Rails.configuration.order[:order_form_description] %></p>
-    <br>
-    <p>Your name will be on a list at the door.</p>
-    <p>(You will not receive actual tickets.)</p>
-    <br>
-    <p>
-      <strong><font color='red'>Please note the earlier time this year!</font></strong><br>
-      Saturday, March 14, 2020<br>
-      6:45 lesson | <strong><font color='red'>7:15-10:30 dance</font></strong><br>
-      PSU Smith Memorial Center Ballroom, 3rd Floor<br>
-      1825 SW Broadway, Portland, Oregon
-    </p>
-    <br>
-    <p>Questions? Email <a href="mailto:contra@portlandcountrydance.org">contra@portlandcountrydance.org</a>.</p>
+    <p>If you wish to donate to PCDC to help cover the costs, please use the form below to do so.</p>
   </div>
   <%= form_for @order do |f| %>
     <%= render '/layouts/errors', object: @order %>
