add link to donation site

--- a/app/views/static_pages/unavailable.html.erb
+++ b/app/views/static_pages/unavailable.html.erb
@@ -6,16 +6,8 @@
     <div class="col-md-12 welcome">
 
       <p class="card">
-        Online sales are closed. Tickets will be available at the door, cash only.<br>
-        <br>
-        Saturday, March 14, 2020<br>
-        6:45 lesson | 7:15-10:30 dance<br>
-        PSU Smith Memorial Center Ballroom, 3rd Floor<br>
-        1825 SW Broadway, Portland, Oregon<br>
-        <br>
-        Paid parking is available in the parking structure across Broadway from the building.<br>
-        <br>
-        <a href="http://www.cascadepromenade.org/dance/2019/12/22/Cascade-Promenade-2020.html">Check out other Cascade Promenade dances!</a><br>
+        2020 Megaband has been cancelled.<br>
+        If you wish to donate to help cover our costs, see more info at <a href="http://portlandmegaband.com">portlandmegaband.com</a>.
     </div>
   </div>
 </section>
