--- a/app/assets/javascripts/order.js.erb
+++ b/app/assets/javascripts/order.js.erb
@@ -1,3 +1,4 @@
+// temp commment to force reload!
 var tshirt_id_counter = 0;
 
 var pricePerAdmission = <%= Rails.configuration.order[:admission_cost] %>;
