remove tshirt ordering part

--- a/app/assets/javascripts/stripe.js.erb
+++ b/app/assets/javascripts/stripe.js.erb
@@ -3,7 +3,7 @@ $(function() {
     // Create a Stripe client
     var stripe_publishable_key = '<%= ENV['STRIPE_PUBLISHABLE_KEY'] %>'
     if (stripe_publishable_key.indexOf('test') != -1) {
-      alert('error: currently in test mode');
+      // alert('error: currently in test mode');
     }
     var stripe = Stripe(stripe_publishable_key);
     var elements = stripe.elements();
