--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <script src="https://js.stripe.com/v3/"></script>
+    <!-- script src="https://js.stripe.com/v3/"></script -->
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <!-- link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" -->
   </head>
 
   <body class="<%= controller_name %> <%= action_name %>">
